<resources>
    <string name="app_name">What 2 Watch</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txvTextNotAvailable">Not available</string>
    <string name="duration">Duration</string>
    <string name="year">Year</string>
    <string name="imdbRating">Rating</string>
    <string name="metascore">Metascore</string>
    <string name="imdbVotes">Votes</string>
    <string name="sample">Loading...</string>
    <string name="country">Country</string>
    <string name="rated">Rated</string>
    <string name="released">Released</string>
    <string name="director">Director</string>
    <string name="writer">Writer</string>
    <string name="actors">Actors</string>
    <string name="awards">Awards</string>
    <string name="language">Language</string>
    <string name="MoviePosterContentDescription">Movie Poster</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="add_to_list">Add to list...</string>
    <string name="new_list">New List</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="no_lists">You have no lists</string>
    <string name="title_activity_cinema_finder">CinemaFinderActivity</string>
    <string name="youtubePlay">See Trailer</string>
    <string name="type_of_place">movie_theater</string>

    <string name="hello_world">Hello world!</string>
    <string name="mark_as_seen">Mark as seen</string>
    <string name="about_fragment_text_es">Esta aplicación ha sido desarrollada para la asignatura "SDM".</string>
    <string name="about_fragment_text_en">This application has been developed for the subject "SDM".</string>
    <string name="your_comment">Your comment</string>
</resources>
